force-app/main/default/objects/Commentary_Event__c/Commentary_Event__c.object-meta.xml
<CustomObject>
    <description>Normalized major events for querying (goals, cards, critical moments only)</description>
    <label>Commentary Event</label>
    <nameField>
        <displayFormat>EVT-{00000}</displayFormat>
        <label>Commentary Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commentary Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>