force-app/main/default/objects/Commentary_Event__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <referenceTo>Commentary__c</referenceTo>
    <relationshipLabel>Commentary Events</relationshipLabel>
    <relationshipName>Commentary_Events</relationshipName>
    <type>MasterDetail</type>
</CustomField>