force-app/main/default/objects/Commentary_Event__c/fields/Embed_Code__c.field-meta.xml
<CustomField>
    <fullName>Embed_Code__c</fullName>
    <label>Embed Code</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Embeddable HTML code for media partners</description>
</CustomField>