force-app/main/default/objects/Commentary_Event__c/fields/Event_Minute__c.field-meta.xml
<CustomField>
    <fullName>Event_Minute__c</fullName>
    <label>Event Minute</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>