force-app/main/default/objects/Commentary_Event__c/fields/Event_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_Type__c</fullName>
    <label>Event Sub Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>