force-app/main/default/objects/Commentary_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goal</fullName>
            </value>
            <value>
                <fullName>Penalty Goal</fullName>
            </value>
            <value>
                <fullName>Own Goal</fullName>
            </value>
            <value>
                <fullName>Yellow Card</fullName>
            </value>
            <value>
                <fullName>Red Card</fullName>
            </value>
            <value>
                <fullName>Substitution</fullName>
            </value>
            <value>
                <fullName>Try</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Wicket</fullName>
            </value>
            <value>
                <fullName>Century</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>VAR Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>