force-app/main/default/objects/Commentary_Event__c/fields/Facebook_Shares__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Shares__c</fullName>
    <label>Facebook Shares</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Shares on Facebook</description>
</CustomField>