force-app/main/default/objects/Commentary_Event__c/fields/Fixture__c.field-meta.xml
<CustomField>
    <fullName>Fixture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixture</label>
    <referenceTo>Fixture__c</referenceTo>
    <relationshipLabel>Commentary Events</relationshipLabel>
    <relationshipName>Commentary_Events</relationshipName>
    <type>Lookup</type>
</CustomField>