force-app/main/default/objects/Commentary_Event__c/fields/Fixture_Period__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixture Period</label>
    <referenceTo>Fixture_Period__c</referenceTo>
    <relationshipLabel>Commentary Events</relationshipLabel>
    <relationshipName>Commentary_Events</relationshipName>
    <type>Lookup</type>
</CustomField>