force-app/main/default/objects/Commentary_Event__c/fields/Primary_Player__c.field-meta.xml
<CustomField>
    <fullName>Primary_Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commentary Events</relationshipLabel>
    <relationshipName>Commentary_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>