force-app/main/default/objects/Commentary_Event__c/fields/Secondary_Player__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commentary Events Secondary</relationshipLabel>
    <relationshipName>Commentary_Events_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>