force-app/main/default/objects/Commentary_Event__c/fields/Share_Count__c.field-meta.xml
<CustomField>
    <fullName>Share_Count__c</fullName>
    <label>Share Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of times this event has been shared</description>
</CustomField>