force-app/main/default/objects/Commentary_Event__c/fields/Social_Media_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Image_URL__c</fullName>
    <label>Social Media Image URL</label>
    <type>Url</type>
    <description>Primary image for social cards</description>
</CustomField>