force-app/main/default/objects/Commentary_Event__c/fields/Social_Share_Title__c.field-meta.xml
<CustomField>
    <fullName>Social_Share_Title__c</fullName>
    <label>Social Share Title</label>
    <type>Text</type>
    <length>255</length>
    <description>Pre-formatted title for social media posts</description>
</CustomField>