force-app/main/default/objects/Commentary_Event__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commentary Events</relationshipLabel>
    <relationshipName>Commentary_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>