force-app/main/default/objects/Commentary_Event__c/fields/Total_Shares__c.field-meta.xml
<CustomField>
    <fullName>Total_Shares__c</fullName>
    <label>Total Shares</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of shares across all platforms</description>
</CustomField>