force-app/main/default/objects/Commentary_Event__c/fields/Twitter_Shares__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Shares__c</fullName>
    <label>Twitter Shares</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Shares on Twitter/X</description>
</CustomField>